Focus to the node when select the node.

--- a/browser/index.html
+++ b/browser/index.html
@@ -125,6 +125,15 @@
           markdown: `
 - a1
   - b1
+      - dddddddddddddddddddd1
+        - eeeeeeeeeeeeeeeeeeeeee2
+          - ffffffffffffffffffffff3
+            - gggggggggggggggggggggggggg3
+              - hhhhhhhhhhhhhhhhhhhhhh2
+                - iiiiiiiiiiiiii52iiiiiiiiiii
+                  - jjjjjjjjjjjjjj25jjjjjjjjjjjj
+                    - kkkkkkkkk2342kkkkkkkkkkkkkkkkk2
+                      - lllllllllll52llllllllllllllllllll
   - b2
   - b3
     - c1
@@ -140,6 +149,34 @@
                       - lllllllllllllllllllllllllllllll
 + a2 \\
   複数行だよ
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
++ aaa
           `,
         });
         return false;
