--- a/browser/index.html
+++ b/browser/index.html
@@ -20,7 +20,7 @@
 
     <script>
       const container = document.getElementById("container");
-      const jsmind = new window.JsMind(1, {
+      const jsmind = new window.MindCheese(1, {
         container: container,
         theme: "primary", // TODO make it customizable?
         editable: true,
