--- a/browser/index.html
+++ b/browser/index.html
@@ -102,7 +102,7 @@
       });
       document.getElementById("viewShow").addEventListener("click", () => {
         console.log("viewShow");
-        jsmind.view.show(false);
+        jsmind.view.show();
         return false;
       });
       document.getElementById("expandSize").addEventListener("click", () => {
