--- a/browser/index.html
+++ b/browser/index.html
@@ -21,7 +21,7 @@
     <script>
       const container = document.getElementById("container");
       const jsmind = new window.MindCheese(1, container);
-      jsmind.show("nodeTree", {
+      jsmind.showNodeTree({
         meta: {
           name: "jsMind remote",
           author: "hizzgdev@163.com",
@@ -135,9 +135,9 @@
         return false;
       });
       document.getElementById("load_markdown").addEventListener("click", () => {
-        jsmind.show("markdown", {
-          title: "マークダウンのテスト",
-          markdown: `
+        jsmind.showMarkdown(
+          "マークダウンのテスト",
+          `
 - a1
   - b1
       - dddddddddddddddddddd1
@@ -192,8 +192,8 @@
 + aaa
 + aaa
 + aaa
-          `,
-        });
+          `
+        );
         resize();
         return false;
       });
