simplify the markdown import/export format.

--- a/browser/index.html
+++ b/browser/index.html
@@ -128,62 +128,62 @@
       });
       document.getElementById("load_markdown").addEventListener("click", () => {
         jsmind.showMarkdown(
-          "マークダウンのテスト",
           `
-- a1
-  - b1
-      - dddddddddddddddddddd1
-        - eeeeeeeeeeeeeeeeeeeeee2
-          - ffffffffffffffffffffff3
-            - gggggggggggggggggggggggggg3
-              - hhhhhhhhhhhhhhhhhhhhhh2
-                - iiiiiiiiiiiiii52iiiiiiiiiii
-                  - jjjjjjjjjjjjjj25jjjjjjjjjjjj
-                    - kkkkkkkkk2342kkkkkkkkkkkkkkkkk2
-                      - lllllllllll52llllllllllllllllllll
-  - b2
-  - b3
-    - c1
-    - c2
-      - dddddddddddddddddddd
-        - eeeeeeeeeeeeeeeeeeeeee
-          - ffffffffffffffffffffff
-            - gggggggggggggggggggggggggg
-              - hhhhhhhhhhhhhhhhhhhhhh
-                - iiiiiiiiiiiiiiiiiiiiiiiii
-                  - jjjjjjjjjjjjjjjjjjjjjjjjjj
-                    - kkkkkkkkkkkkkkkkkkkkkkkkkk
-                      - lllllllllllllllllllllllllllllll
-+ a2 \\
-  複数行だよ
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
-+ aaa
+- マークダウンのテスト
+  - a1
+    - b1
+        - dddddddddddddddddddd1
+          - eeeeeeeeeeeeeeeeeeeeee2
+            - ffffffffffffffffffffff3
+              - gggggggggggggggggggggggggg3
+                - hhhhhhhhhhhhhhhhhhhhhh2
+                  - iiiiiiiiiiiiii52iiiiiiiiiii
+                    - jjjjjjjjjjjjjj25jjjjjjjjjjjj
+                      - kkkkkkkkk2342kkkkkkkkkkkkkkkkk2
+                        - lllllllllll52llllllllllllllllllll
+    - b2
+    - b3
+      - c1
+      - c2
+        - dddddddddddddddddddd
+          - eeeeeeeeeeeeeeeeeeeeee
+            - ffffffffffffffffffffff
+              - gggggggggggggggggggggggggg
+                - hhhhhhhhhhhhhhhhhhhhhh
+                  - iiiiiiiiiiiiiiiiiiiiiiiii
+                    - jjjjjjjjjjjjjjjjjjjjjjjjjj
+                      - kkkkkkkkkkkkkkkkkkkkkkkkkk
+                        - lllllllllllllllllllllllllllllll
+  + a2 \\
+    複数行だよ
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
+  + aaa
           `
         );
         resize();
