rename fields and class names from jsmind to mindcheese

--- a/browser/index.html
+++ b/browser/index.html
@@ -50,7 +50,7 @@
             topic: "Powerful",
             direction: "right",
             children: [
-              { id: "powerful1", topic: "Base on Javascript" },
+              { id: "powerful1", topic: "Base on TypeScript" },
               { id: "powerful2", topic: "Base on HTML5" },
               { id: "powerful3", topic: "Depends on you" },
             ],
