optimize the width of textarea

--- a/browser/index.html
+++ b/browser/index.html
@@ -21,7 +21,7 @@
     <script>
       const container = document.getElementById("container");
       const mindCheese = new window.MindCheese(1, container);
-      window.mindCheese = mindCheese
+      window.mindCheese = mindCheese;
       mindCheese.showNodeTree({
         id: "root",
         topic: "mindCheese",
