--- a/browser/index.html
+++ b/browser/index.html
@@ -68,25 +68,25 @@
         ],
       });
 
-      window.addEventListener("resize", () => resize());
-      resize();
-      function resize() {
-        const container = document.getElementById("container");
-        const menu = document.getElementById("menu");
-        const browserHeight = document.documentElement.clientHeight;
-        const bodyMarginTop = parseInt(
-          getComputedStyle(document.body).marginTop
-        );
-        const bodyMarginBottom = parseInt(
-          getComputedStyle(document.body).marginTop
-        );
-        container.style.height =
-          browserHeight -
-          menu.clientHeight -
-          bodyMarginTop -
-          bodyMarginBottom +
-          "px";
-      }
+      // window.addEventListener("resize", () => resize());
+      // resize();
+      // function resize() {
+      //   const container = document.getElementById("container");
+      //   const menu = document.getElementById("menu");
+      //   const browserHeight = document.documentElement.clientHeight;
+      //   const bodyMarginTop = parseInt(
+      //     getComputedStyle(document.body).marginTop
+      //   );
+      //   const bodyMarginBottom = parseInt(
+      //     getComputedStyle(document.body).marginTop
+      //   );
+      //   container.style.height =
+      //     browserHeight -
+      //     menu.clientHeight -
+      //     bodyMarginTop -
+      //     bodyMarginBottom +
+      //     "px";
+      // }
 
       document.getElementById("layout").addEventListener("click", () => {
         console.log("layout.layout");
