--- a/browser/index.html
+++ b/browser/index.html
@@ -51,7 +51,7 @@
             topic: "Powerful",
             direction: "right",
             children: [
-              { id: "powerful1", topic: "Base on TypeScript" },
+              { id: "powerful1", topic: "Base on **TypeScript**" },
               { id: "powerful2", topic: "Base on HTML5" },
               { id: "powerful3", topic: "Depends on you" },
             ],
@@ -62,7 +62,7 @@
             direction: "left",
             children: [
               { id: "other1", topic: "I'm from local variable" },
-              { id: "other2", topic: "I can do everything" },
+              { id: "other2", topic: "I can do everything: `3*2`" },
             ],
           },
         ],
