--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script src="browser.js" charset="utf-8"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +13,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link href="../styles.css" rel="stylesheet" />
+    <link href="styles/styles.css" rel="stylesheet" />
     <title>Demo site of the MindCheese</title>
   </head>
   <body>
@@ -126,8 +125,11 @@
     </nav>
     <div id="container"></div>
 
+    <script type="module" src="/demo/browser.ts"></script>
     <script>
-      window.initDemo();
+      document.addEventListener("DOMContentLoaded", function () {
+        window.initDemo();
+      });
     </script>
   </body>
 </html>
